# kitspace-v2

./: .gitignore
.github/workflows/: docker.yml
frontend/cypress/integration/: authRedirects.spec.js  errorPage.spec.js  signUpForm.spec.js
frontend/src/components/Board/BuyParts/: index.js
frontend/src/components/NavBar/: UserMenu.js  UserMenu.module.scss  index.js
frontend/src/pages/: login.js
frontend/src/pages/[username]/[projectName]/: index.js
frontend/src/pages/[username]/[projectName]/[multiProjectName]/: index.js
locust/: index.py  locust.conf  pyproject.toml
nginx/: kitspace.template  nginx.conf
